config-overrides.js没被使用 在package.json里配置了分析包

--- a/package.json
+++ b/package.json
@@ -11,16 +11,17 @@
     "start": "node scripts/start.js",
     "build": "node --max_old_space_size=4096 scripts/build.js",
     "vendor": "webpack --config ./config/webpack.vendor.config.js",
+    "analyze": "source-map-explorer public/static/js/*.js",
     "install-all": "npm install"
   },
   "dependencies": {
     "@ant-design/icons": "^4.2.2",
-    "async": "^3.2.0",
-    "axios": "^0.20.0",
     "ali-oss": "6.1.0",
     "antd": "^4.8.2",
-    "classnames": "^2.2.6",
+    "async": "^3.2.0",
+    "axios": "^0.20.0",
     "browserslist": "^4.14.4",
+    "classnames": "^2.2.6",
     "echarts": "^4.8.0",
     "echarts-for-react": "^1.4.4",
     "lodash": "^4.17.5",
@@ -28,6 +29,7 @@
     "moment": "^2.18.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-player": "^2.7.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "viewerjs": "1.2.0"
@@ -113,6 +115,7 @@
     "source-map-support": "^0.5.9",
     "stream-transcoder": "0.0.5",
     "style-loader": "0.23.1",
+    "source-map-explorer": "^2.5.0",
     "terser-webpack-plugin": "1.2.2",
     "url-loader": "1.1.2",
     "uws": "^100.0.1",
